@@ -4,14 +4,18 @@ Hash: SHA256
 AUX devhelp-3.6.1-libm.patch 1091 SHA256 1dd5ff2aea497b4b8181829b94329d1f2bebe8d577a55e207eacea4c3b92ff5c SHA512 15689fae693c9231f22242605557e73fd5a48d11e37a091c7b06d93b1720413790bbfa9cf8bb627200ecaf3b6fcbe34220426698ed033c70275b7b58f15755cd WHIRLPOOL 09e880fcf619f8159712203abb286409ee0a5ad3e2fd72e5c003578cd9915cf3a53426cc49236a29ab12f42ee43a8b70f447f6832ae2c80b252f650efec7cb17
 DIST devhelp-3.6.1.tar.xz 499156 SHA256 71c6933422bf876745fc10276a2b2ee0f8c4c4ddfe034b3f6380507725fd4e63 SHA512 413c47116f8206e8c652d3a22cb8359c4810bf958f51fffcdb445b660b4955afc59e60b3a8f70964eb1c572cdb08a0d0ea35df40faa8208733ef0b62bb9f9e34 WHIRLPOOL 9c4da6366f6d3f6f37154b0ebe5da6f0ec09ce7bd2487dcdf3be1fdca6d7b788ee39678f9c53c8615e3613d3ddaf2970b481667a64da206c3c809add99e53164
 DIST devhelp-3.8.2.tar.xz 503632 SHA256 a245b53824c6f2ff89245ff807bb2140bde74951ea6f1d759a0fd0c6959ca9f7 SHA512 9c91e86369519549aebac0f28da6f70e901d5904d1c12b09f38a3541fff77d05e966caf1b652518b1e66fa8bcefd7ae16416a38de12a4c9ca2c1350f8e8a1bc5 WHIRLPOOL c67a6d4b44cdad196802778986d370987025fd8cb03e684313dfd3487880e95ab115e4f74ce01c5689acb3ecdf560f92c2986168c6a64953400450a9125f3765
-EBUILD devhelp-3.6.1-r1.ebuild 1775 SHA256 526fabb38931ee5ea5b2926574d58c11352be5e9c265aff83210c2abc487be30 SHA512 b10f199dd07143907d1ccc9499f9d0ae36682ca3243ea450731afb6925fa07e32bc2cf19194dbf8786ed0b9b323a57cd52bea719610f05bb6574454ace844705 WHIRLPOOL e5c2393a4431f1332782dbbfd6ef7baa9f3521d60dceaed84041e035448ce6ca9071adddfcc384d1dfa2dfa9a3ff0e505b374c8baf44251b6d32c577e48c4314
+EBUILD devhelp-3.6.1-r1.ebuild 1667 SHA256 3d1ce464b63c778a81c42e1e4b9cdc89213d454ed6e389cb801adf7323f1e9ff SHA512 a0fbc63a7697be59b6fd2e963903807bc81c7bdc69db2bc0065fe30812732c8727c58b28a1d74f48db4662615c2dcb4f8e9a9c078f7e5e29b46d2a180d14eab8 WHIRLPOOL baa092f84a8d6ea4ca0c397e2622c75afc302fbeb0de6d2504a695472cc5a180b31908260daca160d55e8c724a90ad874258730f5dcf506e947894e8fbfb36b4
 EBUILD devhelp-3.8.2.ebuild 1537 SHA256 89d83263ce143ca4d82fc6111ca2f96cd77e736bd7897480564176f0ed7a5884 SHA512 5b50397b1181ee6fa70297913162427f834a5f53c5255aa82ddfe03ed8d2b376e25b156f0b750ad5818d31f1b81c81d476351c669cc89042c2da55fbcddf48ba WHIRLPOOL 1afd287ed78f1aa0694712d6c7b45ba95de31ee91a113ed9ecf9d47a22d65ac5556e73a257b2534548e977e9511ede9324df17f923ae305a5fe4a8ce067cba0e
-MISC ChangeLog 21142 SHA256 cc8b5782a69d73a0e334afb6d4328346d0588f0ce37c5a3fe53e422a4420948a SHA512 9db830de918a9b4ecd5c344fe92831858a514fc2e74b0bce225c4a130b7f634451da583875d50fd92cc5c34ef79620aa652290efdb5d5edf64acbab306e6899b WHIRLPOOL a3ac98ff067896120a15b851000fc80cdc0a82896f79c4132ef610801f5726ab10a6b9bcac705fea89a58dc8e22091788fc0ff1e0fa7b35e3cfd591755feee9c
+MISC ChangeLog 21401 SHA256 e709e493236bc7b7eac21037380ee6dd4f5f7f5b2f4a81a97a904f8c5b7965cd SHA512 bebff99528b827aa143d9960a0ce08b441e4dbce5eca000f46f70b2aa5d34dd28d1341575c12ab0bbb4cc4de945977a34e2d341fcb9b99e230fd069c11f96b44 WHIRLPOOL b0a8292f443c01c56ecf4de7783bcb36b4c14c68fa9d75ea3989d8150ea29b2365592dcebbd92bbb0e44b918e86cbab408d8eac670f09f22d95f675411c749df
 MISC metadata.xml 246 SHA256 b7869ee755ded9fba9f18437bd1561f09b344608c4c131193d1131f3fac9ed42 SHA512 eb2eec1b0ad655d5511fee383d114f40b84661af2cb37e6707b5b30af1d79d1166178be974f10b13dab8690ff6bd9e1a3296c76c61d437e049dec285da400367 WHIRLPOOL a94dca04276ad096ede6f4ad3e0862b66666e9210c4ea631af4e1c8c30125ce54d0c249652990031999c8348168cc7b91f94861ae453641314a870421e504695
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2.0.21 (GNU/Linux)
 
-iEYEAREIAAYFAlIiOokACgkQCaWpQKGI+9SSPQCfcjrx/AqLItatEjf2F+lespFb
-MKwAn2K9pv5qmcs/V/WUYLGVdk4xL8He
-=WVb2
+iQEcBAEBCAAGBQJSItCpAAoJEJ0WA1zPCt1hn0EIAIICVii2yCj1l117j5YIM7An
+LrFZR+sAdqOjfPGVomvH/WixLnN+pwWZJeSLgXI+hoSUUhEtqrhFgsTIng/PyxEg
+8C1irdYd4umpYRohisMALvnFKvXIBa8WzJvVFnvw/BRvfH6BXDppEfAE2SfuFHvN
+ghufcSOX4XwPTWZrlHt6C9InvW0mHg+SK8kcnViUJD+Qi8lPXjWYuNbasKQkFSNx
+qlDHhNprF0zYglY5X+54Ki7o1qOskSevsYmf7ESyDu2L/fdclq9D+p27HCAUD5GI
+hhwvq+ycp0HYWJBxAwAYlWS7OdDsOgcEJbXA9R/0GUm0z5m48NGqnKAZqIK4n94=
+=x3K9
 -----END PGP SIGNATURE-----
