@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/devhelp/devhelp-3.6.1-r1.ebuild,v 1.9 2013/08/27 22:25:37 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/devhelp/devhelp-3.6.1-r1.ebuild,v 1.10 2013/09/01 05:29:08 tetromino Exp $
 
 EAPI="5"
 GCONF_DEBUG="no"
@@ -15,7 +15,7 @@ HOMEPAGE="http://live.gnome.org/devhelp"
 LICENSE="GPL-2+"
 SLOT="0/3-1" # subslot = 3-(libdevhelp-3 soname version)
 KEYWORDS="alpha amd64 ~arm ia64 ppc ~ppc64 sparc x86 ~x86-fbsd"
-IUSE="gedit"
+IUSE=""
 
 # FIXME: automagic python dependency
 COMMON_DEPEND=">=gnome-base/gconf-2.6:2
@@ -23,11 +23,6 @@ COMMON_DEPEND=">=gnome-base/gconf-2.6:2
 	>=x11-libs/gtk+-3.4:3
 	>=net-libs/webkit-gtk-1.6:3"
 RDEPEND="${COMMON_DEPEND}
-	gedit? (
-		${PYTHON_DEPS}
-		app-editors/gedit[introspection,python,${PYTHON_USEDEP}]
-		dev-python/pygobject:3[${PYTHON_USEDEP}]
-		x11-libs/gtk+[introspection] )
 	gnome-base/gsettings-desktop-schemas"
 DEPEND="${COMMON_DEPEND}
 	${PYTHON_DEPS}
@@ -45,7 +40,8 @@ src_prepare() {
 		G2CONF="${G2CONF} --with-compile-warnings=no"
 	fi
 
-	use gedit || sed -e '/SUBDIRS/ s/gedit-plugin//' -i misc/Makefile.{am,in} || die
+	# always disable gedit support, it requires <gedit-3.8 (bug #483084)
+	sed -e '/SUBDIRS/ s/gedit-plugin//' -i misc/Makefile.{am,in} || die
 
 	# https://bugzilla.gnome.org/show_bug.cgi?id=688919
 	epatch "${FILESDIR}/${PN}-3.6.1-libm.patch"
