@@ -3,11 +3,11 @@ DEPEND=>=gnome-base/gconf-2.6:2 >=dev-libs/glib-2.32:2 >=x11-libs/gtk+-3.4:3 >=n
 DESCRIPTION=An API documentation browser for GNOME
 EAPI=5
 HOMEPAGE=http://live.gnome.org/devhelp
-IUSE=gedit python_targets_python2_6 python_targets_python2_7 python_single_target_python2_6 python_single_target_python2_7
+IUSE=python_targets_python2_6 python_targets_python2_7 python_single_target_python2_6 python_single_target_python2_7
 KEYWORDS=alpha amd64 ~arm ia64 ppc ~ppc64 sparc x86 ~x86-fbsd
 LICENSE=GPL-2+
-RDEPEND=>=gnome-base/gconf-2.6:2 >=dev-libs/glib-2.32:2 >=x11-libs/gtk+-3.4:3 >=net-libs/webkit-gtk-1.6:3 gedit? ( python_single_target_python2_6? ( dev-lang/python:2.6 ) python_single_target_python2_7? ( dev-lang/python:2.7 ) dev-python/python-exec[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_single_target_python2_6(+)?,python_single_target_python2_7(+)?] app-editors/gedit[introspection,python,python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_single_target_python2_6(+)?,python_single_target_python2_7(+)?] dev-python/pygobject:3[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_single_target_python2_6(+)?,python_single_target_python2_7(+)?] x11-libs/gtk+[introspection] ) gnome-base/gsettings-desktop-schemas
+RDEPEND=>=gnome-base/gconf-2.6:2 >=dev-libs/glib-2.32:2 >=x11-libs/gtk+-3.4:3 >=net-libs/webkit-gtk-1.6:3 gnome-base/gsettings-desktop-schemas
 SLOT=0/3-1
 SRC_URI=mirror://gnome/sources/devhelp/3.6/devhelp-3.6.1.tar.xz
 _eclasses_=autotools	16761a2f972abd686713e5967ff3c754	eutils	63afaaed8aa819fdcb814c7cd39495a2	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	gnome.org	8fef8f967214f56e08fa92d61163d891	gnome2	7976d3f4d0c0816c67033d3dcd4d9472	gnome2-utils	794d2847b4af390a1e020924876c8297	libtool	b1c8688e60f9580bcb9bb46e08737eb1	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	a2130e6fc4aa4c6a24b265ca0cbcc2b6	python-single-r1	b13f5baea5da0da5a5dcc6b8b79706a2	python-utils-r1	3668f5e62c6e2526acef650e8e1e8fc4	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4
-_md5_=1b370ae75de07ea1c11c1aa7957fd0b8
+_md5_=5f1eb70a4f2aedd8c0552e60f388b003
